# haskell-book

./: Chapter-11.ipynb  Chapter-12.ipynb  Chapter-13.ipynb  Chapter-14.ipynb  Chapter-17.ipynb  Chapter-18.ipynb  Chapter-19.ipynb  Chapter-20.ipynb  Chapter-21.ipynb  Chapter-22.ipynb  Chapter-23.ipynb  Chapter-24.ipynb  Chapter-25.ipynb  Chapter-26.ipynb  Chapter-27.ipynb  Chapter-28.ipynb  Chapter-29.ipynb  Chapter-30.ipynb  README  README.md  default.nix  ihaskell  pkgs.nix  shell.nix  versions.json
fingerd/: LICENSE  fingerd.cabal
fingerd/src/: Debug.hs  Insert.hs  Lib.hs  Main.hs
