name:                fingerd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/parry84/fingerd#readme
license:             BSD3
license-file:        LICENSE
author:              Emanuele Parrinello
maintainer:          parry84@gmail.com
copyright:           2021 Emanuele Parrinello
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable debug
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network

executable fingerd
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , network
                       , raw-strings-qq
                       , sqlite-simple
                       , text

executable insert
  hs-source-dirs:      src
  main-is:             Insert.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , network
                       , raw-strings-qq
                       , sqlite-simple
                       , text